feat: add support for additional rules in config
- Add optional 'additionalRules' array to config file
- Display user's additional rules in console during fetch
- Include additional rules section in generated markdown
- Add example config file with additionalRules
- Update README with additionalRules documentation

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ FINAL_SUMMARY.md
 
 # pr-cleaner-ai - Cursor rules file (auto-generated, don't commit)
 .cursor/rules/pr-cleaner-ai.mdc
+
+# User configuration (user-specific)
+.pr-cleaner-ai.config.json
