refactor: modularize codebase into services and utilities
- Split monolithic fetch-comments.ts (784 lines) into 11 modules
- Create organized structure: types/, services/, utils/, commands/
- Maintain 100% backwards compatibility - zero functional changes
- All original logic preserved 1:1 in new structure

Modules created:
- types/index.ts: Type definitions
- services/git.service.ts: Git operations
- services/github.service.ts: GitHub API interactions
- services/config.service.ts: Configuration loading
- services/comments.service.ts: Comment fetching logic
- utils/grouping.util.ts: Comment grouping logic
- utils/markdown.generator.ts: Markdown generation (223 lines)
- utils/json.generator.ts: JSON generation
- utils/output.util.ts: File output operations
- commands/fetch.command.ts: Main command orchestration
- index.ts: CLI entry point

Benefits:
- Better testability (each module can be tested independently)
- Easier maintenance (changes isolated to specific modules)
- Improved readability (smaller focused files vs 784-line monolith)
- TypeScript compilation to dist/ for production use

No breaking changes - same behavior, cleaner architecture

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Dependencies
 node_modules/
 
-# Build outputs
+# Build outputs (don't commit in development, but include in npm publish)
 dist/
 *.tsbuildinfo
 
