perf: reduce package size by excluding source maps
- Remove .map files from npm package (not needed in production)
- Add clean:maps script to remove source maps before publish
- Reduces package size: 145KB → 108KB unpacked (~25% smaller)
- Reduces tarball size: 37KB → 29KB (~22% smaller)

--- a/.npmignore
+++ b/.npmignore
@@ -15,10 +15,16 @@ __tests__/
 *.md
 !README.md
 
+# Note: dist/ is included in package.json "files" array, so it's published
+# but .map files are excluded above
+
 # Output files
 output/
-dist/
 .pr-cleaner-ai-output/
+
+# Source maps (not needed in production)
+*.map
+dist/**/*.map
 
 # IDE files
 .vscode/
