fix: include scripts/ directory in npm package
scripts/postinstall.js was missing from package.json files field,
causing installation to fail with MODULE_NOT_FOUND error.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "files": [
         "bin/",
         "dist/",
+        "scripts/",
         "config/pr-cleaner-ai.mdc",
         "README.md",
         "LICENSE"
