fix: disable component in tag name for Release Please

--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -12,6 +12,7 @@
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": true,
       "versioning": "default",
+      "include-component-in-tag": false,
       "extra-files": [
         "package.json",
         "package-lock.json"
